# Labwork3

labwork3-ssnchk-main/: CMakeLists.txt  README.md
labwork3-ssnchk-main/lib/: BMPWriter.cpp  SandParse.cpp  SandParse.h  SandPile.cpp  SandPile.h
